# Nexis

./: .dockerignore  .env.example  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  rustfmt.toml
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  docs.yml  release.yml  security.yml
apps/mobile/: app.json  package-lock.json  package.json  tsconfig.json
apps/web/: README.md  package-lock.json  package.json
crates/nexis-billing/: Cargo.toml
crates/nexis-billing/src/: db.rs  lib.rs  logger.rs  pricing.rs
crates/nexis-calendar/: Cargo.toml
crates/nexis-doc/: Cargo.toml
crates/nexis-gateway/: Cargo.toml
crates/nexis-meeting/: Cargo.toml
crates/nexis-memory/: Cargo.toml  README.md
crates/nexis-plugin/: Cargo.toml
crates/nexis-plugin/src/: error.rs  extension_points.rs  lib.rs  manager.rs  plugin.rs
crates/nexis-runtime/: Cargo.toml
crates/nexis-skills/: Cargo.toml  README.md
crates/nexis-task/: Cargo.toml
deploy/: .env.example  docker-compose.prod.yml  docker-compose.yml
docker/: Dockerfile.gateway
docs/: CONTRIBUTING.md  GAP_ANALYSIS.md  README.zh-CN.md  index.md  package-lock.json  package.json  performance.md
docs-src/: book.toml
docs-src/src/: api-reference.md  index.md
protocol/: nexis-id.md
scripts/: e2e_test.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: usage.py
sdk/python/nexis/: __init__.py  client.py  models.py  websocket.py
tests/: collaboration_test.rs
(+125 files in other folders)
