[project]
name = "nexis-sdk"
version = "0.1.0"
description = "Python SDK for Nexis API"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.24",
    "websockets>=11",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
